<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Guideline
        android:id="@+id/loginFragment_guideline_leftMargin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="40dp" />

    <TextView
        android:id="@+id/loginFragment_textView_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/loginFragment_editText_username"
        android:text="@string/loginFragment_textView_username_text"
        app:layout_constraintBottom_toTopOf="@+id/loginFragment_editText_username"
        app:layout_constraintStart_toStartOf="@+id/loginFragment_guideline_leftMargin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/loginFragment_editText_username"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/loginFragment_editText_username_hint"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/loginFragment_textView_password"
        app:layout_constraintStart_toStartOf="@+id/loginFragment_guideline_leftMargin"
        app:layout_constraintTop_toBottomOf="@+id/loginFragment_textView_username" />

    <TextView
        android:id="@+id/loginFragment_textView_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:labelFor="@id/loginFragment_editText_password"
        android:text="@string/loginFragment_textView_password_text"
        app:layout_constraintBottom_toTopOf="@+id/loginFragment_editText_password"
        app:layout_constraintStart_toStartOf="@+id/loginFragment_guideline_leftMargin"
        app:layout_constraintTop_toBottomOf="@+id/loginFragment_editText_username" />

    <EditText
        android:id="@+id/loginFragment_editText_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:imeOptions="actionSend"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/loginFragment_button_login"
        app:layout_constraintStart_toStartOf="@+id/loginFragment_guideline_leftMargin"
        app:layout_constraintTop_toBottomOf="@+id/loginFragment_textView_password" />

    <Button
        android:id="@+id/loginFragment_button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/loginFragment_button_login_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/loginFragment_guideline_leftMargin"
        app:layout_constraintTop_toBottomOf="@+id/loginFragment_editText_password" />

</android.support.constraint.ConstraintLayout>